# Sidewinder

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
scripts/: build-appstore.sh  build-direct.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  elysium.rs  lib.rs  main.rs  models.rs  watcher.rs
src-tauri/src/commands/: mod.rs  notes.rs  vault.rs  window.rs
src/components/common/: ConfirmDialog.tsx  EditModeSelector.tsx  UpgradePrompt.tsx  ViewModeSelector.tsx
src/components/elysium/: CalendarView.tsx  ElysiumIcons.tsx  ElysiumNotesView.tsx
src/components/layout/: AppShell.tsx  SlideTab.tsx  TitleBar.tsx
src/components/notes/: AccordionView.tsx  AlwaysOpenView.tsx  FullNoteView.tsx  MoveNoteDialog.tsx  NoteContent.tsx  NoteList.tsx  NoteListHeader.tsx
src/components/onboarding/: Onboarding.tsx
src/components/search/: SearchView.tsx
src/components/settings/: Settings.tsx
src/components/vault/: MoveVaultDialog.tsx  VaultAddDialog.tsx  VaultCard.tsx  VaultEditDialog.tsx  VaultList.tsx
src/hooks/: useLicense.ts  useNotes.ts  useSortedNotes.ts  useVaults.ts  useWindowSlide.ts
src/lib/: i18n.ts  license.ts  sortNotes.ts  tauri.ts
src/stores/: store.ts
src/types/: index.ts
