[package]
name = "sidewinder"
version = "0.1.0"
description = "A slide-out notes panel"
authors = ["ryan"]
edition = "2021"

[lib]
name = "sidewinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
notify = "8"
notify-debouncer-mini = "0.7"
tokio = { version = "1", features = ["time", "sync"] }
dirs = "6"
