[package]
name = "sidewinder"
version = "0.1.0"
description = "A slide-out notes panel"
authors = ["ryan"]
edition = "2021"

[lib]
name = "sidewinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
notify = "8"
notify-debouncer-mini = "0.7"
tokio = { version = "1", features = ["time", "sync"] }
dirs = "6"
serde_yaml = "0.9.34"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSScreen", "NSGraphics"] }
objc2 = "0.6"
plist = "1.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi"] }
